--- a/marvel-store/pom.xml
+++ b/marvel-store/pom.xml
@@ -62,6 +62,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.12</version>
+        </dependency>
     </dependencies>
 
     <build>
